[package]
name = "rust-blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.38"
serde = "1.0.147"
serde_json = "1.0.87"
serde_derive = "1.0.147"
sha2 = "0.7.0"
indicatif = "0.17.1"
